feat: init需要提交init secret (#3)
* feat: init需要提交init secret

* Update web/src/routes/init.tsx


* feat: init secret支持redis

---------
